--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 <script src="./prospector.js"></script>
+<style>
+.passers {
+    text-align: right;
+    font-style: italic;
+    font-size: small;
+}
+</style>
 </head>
 <body>
 <div class="container">
