--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Prospector</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" href="loaders.min.css">
 <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 <script src="./prospector.js"></script>
 <style>
@@ -21,7 +22,7 @@
             <div id="urlEntry">
                 <div class="col-md-2"><p align="right">Entrant "share" link</p></div>
                 <div class="col-md-8"><input id="entrantUrl" type="text" style="width:80%" autofocus></div>
-                <div class="col-md-1"><button class="btn btn-primary" onclick="getEntrant()">Go</button></div>
+                <div class="col-md-1"><button id="goBtn" class="btn btn-primary" onclick="getEntrant()">Go</button></div>
             </div>
 
             <hr>
