Added c3js charting for fastest times.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <head>
 <title>Prospector</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link href="./lib/c3.min.css" rel="stylesheet" type="text/css">
 <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="./lib/c3.min.js"></script>
 <script src="./stats/elapsedTimes.js"></script>
 <script src="./stats/passers.js"></script>
+<script src="./stats/percentageVsBest.js"></script>
 <script src="./prospector.js"></script>
 <style>
 .passers {
